@startuml
'https://plantuml.com/class-diagram

abstract class Media {
#id : int
#titre : string
#dureeEmprunt : string
#statut : string
#dateCreation : DateTime
}

class Livre {
-isbn : int
-auteur : string
-nombrePages : int
}

class BluRay {
-realisateur : string
-duree : int
-anneeSortie : string
}

class Magazine {
-numero : int
-datePublication : DateTime
}

class Adherent {
-id : int
-numeroAdherent : string
-prenom : string
-nom : string
-email : string
-dateAdhesion : DateTime
+checkAdhesionValide()
}

class Emprunt {
-id : int
-numeroEmprunt : string
-dateEmprunt : DateTime
-dateRetourEstimee : ?DateTime
-dateRetour : ?DateTime
+checkEmpruntActif()
+checkEmpruntLate()
}

Media <|-- Livre
Media <|-- Magazine
Media <|-- BluRay
Adherent "1..1  " <-- "0..* " Emprunt : " effectue"
Emprunt "0..*  " --> "1..1  " Media : " est choisi dans"
@enduml